added navigation links

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -52,3 +52,14 @@
 .min-height-full {
   min-height: 100vh;
 }
+
+.nav-bar {
+  margin-top: 14px;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.resume-link {
+  
+  font-size: 16px; 
+}
