--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -56,5 +56,6 @@
     <hr>
     <p class=nav-bar>Navigation</p>
     <p class=resume-link><a href="resume">My Resume</a></p>
+    <p class=resume-link><a href="blog-posts">Personal</a></p>
   </div>
 {% endif %}
