--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -53,9 +53,9 @@
     {% if user.hireable %}
       <span title="Hire me" class="d-inline-block f5 rounded-2 text-white bg-green py-1 px-2">Available for hire</span>
     {% endif %}
-    <hr>
+    <!-- <hr>
     <p class=nav-bar>Navigation</p>
     <p class=resume-link><a href="resume">My Resume</a></p>
-    <p class=resume-link><a href="blog-posts">Personal</a></p>
+    <p class=resume-link><a href="blog-posts">Personal</a></p> -->
   </div>
 {% endif %}
